[tool.poetry]
name = "riem"
version = "0.5.4"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pybotters = "^1.0.0"
sqlalchemy = "^2.0.27"
xxhash = "^3.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
